Fix select tag overflow.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  * Theme URI: https://foxnet-themes.fi/downloads/eino
  * Description: Some kind of Franter.
  * Tags: sticky-post, theme-options, threaded-comments, translation-ready, one-column, two-columns, three-columns, left-sidebar, right-sidebar, flexible-width, custom-background, custom-header, featured-images, flexible-header, post-formats, translation-ready, dark, white, light
- * Version: 0.1
+ * Version: 0.1.1
  * Author: Sami Keijonen
  * Author URI: https://foxnet-themes.fi/
  * Text Domain: eino
@@ -673,6 +673,9 @@ textarea {
 	min-height: 160px;
 	min-height: 10rem;
 }
+select {
+	max-width: 100%;
+}
 
 /* === Alignement (WP classes) === */
 
@@ -732,18 +735,8 @@ img.header-image {
 }
 
 /* Override the Twitter embed fixed width to make tweet responsive. And the same for embed audio. */
-.entry-content .twitter-tweet-rendered,
-.entry-media .wp-audio-shortcode,
-.entry-content .wp-audio-shortcode {
+.entry-content .twitter-tweet-rendered {
 	max-width: 100% !important;
-}
-.entry-media .wp-audio-shortcode,
-.entry-content .wp-audio-shortcode {
-	height: 31px !important;
-}
-.entry-media .mejs-controls div.mejs-horizontal-volume-slider,
-.entry-content .mejs-controls div.mejs-horizontal-volume-slider {
-	width: 58px;
 }
 
 /* === Thumbnails === */
